--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/pxai/webfinde/issues"
   },
   "homepage": "https://github.com/pxai/webfinde#readme",
-  "dependencies": {
+  "dev-dependencies": {
     "remark-cli": "^8.0.0",
     "remark-lint": "^7.0.0",
     "remark-preset-lint-recommended": "^4.0.0"
