--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx remark book/content/*.md"
+    "test": "npx remark book/content/*.md",
+    "spell": "mdspell  -x --es-es -r book/content/*.md"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,8 @@
     "remark-cli": "^8.0.0",
     "remark-lint": "^7.0.0",
     "remark-preset-lint-recommended": "^4.0.0"
+  },
+  "devDependencies": {
+    "markdown-spellcheck": "^1.3.1"
   }
 }
