--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "npx remark book/content/*.md",
-    "spell": "mdspell  -x --es-es -r book/content/*.md"
+    "spell": "mdspell  -x --es-es -r book/content/*.md",
+    "start": "miniserver --port 3000 samples/html",
+    "cypress:run": "npx cypress run",
+    "client": "npx start-server-and-test start http-get://localhost:3000 cypress:run",
+     "homepage": "./"
   },
   "repository": {
     "type": "git",
@@ -26,6 +30,9 @@
     "remark-preset-lint-recommended": "^4.0.0"
   },
   "devDependencies": {
-    "markdown-spellcheck": "^1.3.1"
+    "cypress": "^4.7.0",
+    "markdown-spellcheck": "^1.3.1",
+    "miniserver": "^1.0.3",
+    "start-server-and-test": "^1.11.0"
   }
 }
