--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx remark book/content/*.md",
+    "test": "npx remark book/content/*.md && npm run-script client",
     "spell": "mdspell  -x --es-es -r book/content/*.md",
     "start": "miniserver --port 3000 samples/html",
     "cypress:run": "npx cypress run",
